--- a/BrokenForms/BrokenForms/BrokenForms.csproj
+++ b/BrokenForms/BrokenForms/BrokenForms.csproj
@@ -62,6 +62,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BrokenMath.cs" />
     <Compile Include="ThreadDebuggingForm.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
